src/main/css/search.css
.search-results .content {
    margin-top: 0;
}

.search-results .pure-u-3-4 .module {
    margin-top: 0;
    background-color: unset;
}

.tooltips, .popin>div, #search-content-counts, #showPubMedStrategies {
    display: none;
}

#spellCheckLink {
    padding-right: 25px;
}

.primaryLink {
    font-size: 18px;
}

.primaryType {
    text-transform: uppercase;
    color: #666;
    display: list-item;
}

.popin {
    height: 16px;
    margin-bottom: 20px;
}

.popInLabel {
    font-weight: bold;
    padding-right: 25px;
}

#spellCheck .popInLabel {
    padding-right: 5px;
}

.resource .bookcover {
    float: right;
    padding: 10px 30px;
}

.resource .bookcover i {
    font-size: 86px;
}

.resource img {
    height: 112px;
    width: 80px;
}

/* abstract and description related styles*/
.description {
    display: none;
    position: relative;
    top: -1px;
    background-color: #f2f3ed;
    border: 1px solid;
    padding: 12px;
}

.descriptionTrigger {
    cursor: pointer;
    padding: 1px 5px;
    border: 1px solid #ccc;
}

.descriptionTrigger .fa-eye {
    color: #428bca;
}

li.active .descriptionTrigger {
    background-color: #f2f3ed;
    border: 1px solid;
    padding: 0 12px;
    border-bottom-color: #f2f3ed;
    display: inline-block;
    position: relative;
    z-index: 1;
}

li.active .description {
    display: block;
}

.resultInfo span {
    display: inline-block;
    margin-right: 24px;
}

.resultInfo span:first-child {
    min-width: 103px;
    margin-right: 10px;
}

/* rightSearchTips used on clinical/peds search */
.rightSearchTips {
    padding: 0 12px;
    white-space: nowrap;
}

.rightSearchTips .heading {
    font-weight: bold;
    padding: 10px 0 5px;
    border-bottom: solid 1px #909090;
    margin-bottom: 4px;
}

.rightSearchTips ul {
    padding-left: 0;
}

.content .rightSearchTips li {
    padding: 3px 0 2px;
    border-bottom: none;
}

.authors-hide {
    display: none;
}

.authorsTrigger {
    cursor: pointer;
    padding: 1px 5px;
    border: 1px solid #ccc;
}

.sourceInfo{
    position: relative;
}

.sourceInfo span {
    margin-left: 30px;
    display: inline-block;
}

.sourceInfo span:first-child {
    min-width: 140px;
    margin-left: 0;
}
/* absolute positioning so it doesn't move when shareable link copied */
.browzineDirect{
    position: absolute;
    left: 355px;    
}

.requestIt a {
    padding: 1px 5px;
    font-size: unset;
}

.permalink {
    padding: 0 10px;
}

.permalink .fa-check {
    color: green;
}

.lwSearchResults .resource {
    padding: 12px;
    margin: 10px 0;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.12),0 2px 4px 0 rgba(0,0,0,.24);
    border-radius: 4px;
    background-color: #fff;
}

.lwSearchResults div:not(.author, .citation) {
    padding-top: 10px;
}

.lwSearchResults .citation {
    font-style: italic;
    opacity: .90;
}

.hldgsContainer table {
    padding: 10px 0;
}

.hldgsContainer thead {
    background: #f7f7f7;
    color: #666;
}

.hldgsContainer th {
    vertical-align: middle;
    padding-top: 0;
    padding-bottom: 0;
    padding-right: 50px;
    border-top: 1px solid #d2d2d2;
    border-bottom: 1px solid #d2d2d2;
    border-right: none;
    border-left: none;
}

.hldgsContainer th:first-child {
    border-left: 1px solid #d0d8da;
}

.hldgsContainer th:last-child {
    border-right: 1px solid #d0d8da;
}

.hldgsContainer tbody tr:nth-child(2n+1) {
    background: #fff;
}

.hldgsContainer td, .hldgsContainer td:first-child {
    border-right: unset;
    border-bottom: 1px solid #d0d8da;
    padding-right: 50px;
    max-width: 380px;
}

.hldgsContainer td:last-child {
    padding-right: 10px;
}

.hldgsContainer td span, .getPassword {
    padding-right: 10px;
}

.versionText {
    opacity: 0.75;
}

.requestIt {
    padding: 10px;
}

.requestIt .btn {
    box-shadow: 0 5px 5px 0 rgba(0,0,0,.12),0 5px 5px 0 rgba(0,0,0,.24);
    font-weight: normal;
}

.hldgsContainer {
    padding: 5px 2px;
}

.hldgsContainer table {
    display:none;
}

.hldgsHeader {
    padding-right: 15px;
    display: inline-block;
    min-width: 140px;
}

.hldgsHeader.available {
    color: #498433;
}

.hldgsHeader.unavailable {
    color: #C74632;
}

.hldgsHeader .fa-solid, .hldgsHeader .fa-regular, .hldgsHeader .fa-light {
    padding-right: 6px;
}

.hldgsHeader .fa-solid.fa-book {
    padding-right: 9px;
}
    
.fa-link-horizontal {    
    color: #666;
}

.hldgsTrigger {
    cursor: pointer;
    padding: 1px 5px;
    border: 1px solid #ccc;
    margin: 0 15px;
}

@media ( max-width : 1100px) {
    .sourceInfo span {
        margin-left: 0px;
    } 
    .sourceInfo span.permalink {
        display: inline;
    }
    .browzineDirect{
        position: static;
        padding: 10px 0;
    }
    .search-results .content {
        margin: 0 6px;
    }
    .resource .bookcover {
        padding: 5px 10px 0 0;
        float: left;
    }
    .requestIt {
        padding-left: 0;
        display: block;
    }
    .hldgsContainer {
        overflow-x: auto;
        width: 100%;
    }
    .hldgsTrigger {
        float: right;
    }
}

